--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
     
   </header>
   <main class="">
-    <div class="row justify-content-center align-items-center g-2 intro text-white">
+    <div class="row justify-content-center align-items-center d-flex intro text-white">
 
-      <div class="col-lg-6 col-md-12 intro-text">
+      <div class="col-lg-6 intro-text">
 
         <hr class="mb-5">
 
@@ -78,7 +78,7 @@
       
       </div>
 
-      <div class="col-lg-6 col-md-12 img">
+      <div class="col-lg-6 img">
         <img class="desktop" src="./images/image-intro-desktop.jpg" alt="intro-img">
         <img class="mobile" src="./images/image-intro-mobile.jpg" alt="intro-img">
       </div>
@@ -154,13 +154,13 @@
   
   <footer>
 
-    <div class="row justify-content-between align-items-center w-auto">
+    <div class="row justify-content-between align-items-center w-auto footer-div">
 
-      <div class="col-lg-6 d-flex">
+      <div class="col-lg-6 d-flex footer-logo">
         <img src="./images/logo.svg" alt="logo-img">
       </div>
 
-      <div class="col-lg-6 d-flex justify-content-end socials">
+      <div class="socials col-lg-6 d-flex">
         <a href=""><img class="icons" src="./images/icon-facebook.svg" alt="facebook-icon"></a>
         <a href=""><img class="icons" src="./images/icon-twitter.svg" alt="twitter-icon"></a>
         <a href=""><img class="icons" src="./images/icon-pinterest.svg" alt="pinterest-icon"></a>            
@@ -173,7 +173,7 @@
 
     <div class="row text-uppercase mt-5">
 
-      <div class="col-lg-3 col-md-6 col-sm-12 text-start">
+      <div class="col-lg-3 col-md-6 col-sm-12 shorts">
         <p>Our company</p>
         <a href="">How we work</a>
         <a href="">Why Insure?</a>
@@ -181,7 +181,7 @@
         <a href="">Reviews</a>
       </div>
 
-      <div class="col-lg-3 col-md-6 col-sm-12 text-start">
+      <div class="col-lg-3 col-md-6 col-sm-12 shorts">
         <p>Help me</p>
         <a href="">FAQ</a>
         <a href="">Terms of use</a>
@@ -189,14 +189,14 @@
         <a href="">Cookies</a> 
       </div>
 
-      <div class="col-lg-3 col-md-6 col-sm-12 text-start">
+      <div class="col-lg-3 col-md-6 col-sm-12 shorts">
         <p>Contact</p>
         <a href="">Sales</a>
         <a href="">Support</a>
         <a href="">Live chat</a>
       </div>
 
-      <div class="col-lg-3 col-md-6 col-sm-12 text-start">
+      <div class="col-lg-3 col-md-6 col-sm-12 shorts">
         <p>Others</p>
         <a href="">Careers</a>
         <a href="">Press</a>
