--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
       </div>
     
     </div>
-    <div class="social-links">
+<!--     <div class="social-links">
       <p>Find me on Twitter: <a href="https://www.twitter.com/ArchieJK9" target="_blank">@ArchieJK9</a></p>
-    </div>
+    </div> -->
   </footer>
   <script src="script.js"></script>
   <script src="bootstrap.bundle.js"></script>
